# doser

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PHASE2-QUICKREF.md  PHASE2-SUMMARY.md  README.md  RUNBOOK.md  deny.toml  doser_config.csv  doser_config.toml  install.sh  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml  security.yml
docs/: ARCHITECTURE.md  CONFIG_SCHEMA.md  INDEX.md  OPERATIONS.md  ORGANIZATION.md  PHASE2-COMPLETE.md  README.md  RUST_PRIMER.md  RUST_PRIMER_DETAILED.md  performance-roadmap.md
docs/adr/: ADR-001-predictive-stop.md
docs/architecture/: DataFlow.md  Modules.md  Overview.md
docs/concepts/: build-ci.md  concurrency-time.md  concurrency.md  config.md  control-loop.md  enums-matching.md  error-handling.md  fixed-point-and-filters.md  fixed-point-filters.md  hardware-abstraction.md  logging-jsonl.md  ownership-borrowing.md  time.md  traits-generics.md  unsafe-os.md
docs/guides/: DeveloperHandbook.md  Glossary.md  HARDWARE_SETUP.md  RUST_PRIMER.md
docs/ops/: Runbook.md
docs/reference/: CONFIG_SCHEMA.md  PI_SMOKE.md
docs/reviews/: business-best-practices-review.md  coffee-bean-doser-business-analysis.md  fix-1.2-sampler-thread-lifecycle.md  security-performance-review.md  test-hang-fix.md
docs/testing/: Strategy.md
doser_cli/: Cargo.toml
doser_cli/src/: cli.rs  dose.rs  error_fmt.rs  main.rs  rt.rs  tracing_setup.rs
doser_cli/tests/: cli_integration.rs  jsonl_schema.rs  timeout_bubbles.rs
doser_config/: Cargo.toml
doser_config/src/: lib.rs
doser_config/tests/: calibration_csv.rs  validation.rs
doser_core/: Cargo.toml
doser_core/benches/: predictor.rs
doser_core/src/: atomic.rs  builder.rs  calibration.rs  config.rs  conversions.rs  core.rs  dosing_strategy.rs  error.rs  fixed_point.rs  hw.rs  hw_error.rs  lib.rs  logger.rs  mocks.rs  runner.rs  sampler.rs  session.rs  status.rs  types.rs  util.rs
doser_core/tests/: accuracy.rs  builder_errors.rs  calibration_header.rs  doser.rs  epsilon_validation.rs  error.rs  estop.rs  hardening.rs  integration.rs  period_helpers.rs  predictor.rs  predictor_harness.rs  property.proptest-regressions  property.rs  sampler_thread_lifecycle.rs  session.rs  speed_bands.rs
doser_hardware/: Cargo.toml
doser_hardware/src/: error.rs  hx711.rs  lib.rs  util.rs
doser_hardware/tests/: hx711_sim.rs  wait_util.rs
doser_traits/: Cargo.toml
doser_traits/src/: clock.rs  lib.rs
doser_ui/: Cargo.toml
doser_ui/src/: lib.rs
etc/: doser_config.toml
examples/: custom_strategy.rs  quick_start.rs  simulated_hardware.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_config_loader.rs
