[workspace]
members = [
    "doser_cli",
    "doser_core",
    "doser_hardware",
    "doser_ui",
    "doser_config",
    "doser_traits",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
toml = "0.8"
thiserror = "2"

# Performance-focused release profile
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
