[package]
name = "doser_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Error & logging (CLI only)
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
    "json",
] }
tracing-appender = "0.2"

# Parse the Config TOML text right here
toml = "0.8"

# Workspace crates
doser_core = { path = "../doser_core" }
doser_config = { path = "../doser_config" }
doser_traits = { path = "../doser_traits" }
doser_hardware = { path = "../doser_hardware" }

[features]
default = []
hardware = ["doser_hardware/hardware"]
