[package]
name = "doser_cli"
version = "0.1.0"
edition.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Signal handling
ctrlc = "3.4"

# For real-time system calls
libc = "0.2"

# Error & logging (CLI only)
eyre = "0.6"
color-eyre = { version = "0.6", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
    "json",
] }
tracing-appender = "0.2"

# Parse the Config TOML text right here (use workspace-pinned version)
toml = { workspace = true }

# JSON serialization for structured output
serde_json = "1"

# Workspace crates
doser_core = { path = "../doser_core" }
doser_config = { path = "../doser_config" }
doser_traits = { path = "../doser_traits" }
doser_hardware = { path = "../doser_hardware" }

[features]
default = []
hardware = ["doser_hardware/hardware"]
rt = ["doser_hardware/rt"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
rstest = "0.23"
serde_json = "1"
