[package]
name = "doser_core"
version = "0.1.0"
edition.workspace = true

[dependencies]
crossbeam-channel = "0.5"
doser_traits = { path = "../doser_traits" }
chrono = "0.4"
thiserror = { workspace = true }
toml = { workspace = true }
doser_hardware = { path = "../doser_hardware" }
eyre = "0.6.12"
tracing = "0.1"

[dev-dependencies]
rstest = "0.23"
