[package]
name = "doser_core"
version = "0.1.0"
edition.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
crossbeam-channel = "0.5"
doser_traits = { path = "../doser_traits" }
chrono = "0.4"
thiserror = { workspace = true }
toml = { workspace = true }
doser_hardware = { path = "../doser_hardware" }
eyre = "0.6.12"
tracing = "0.1"

[dev-dependencies]
rstest = "0.23"
proptest = "1"
criterion = { version = "0.5", default-features = false, features = [
    "html_reports",
] }
