[package]
name = "doser_hardware"
version = "0.1.0"
edition.workspace = true

[dependencies]
doser_traits = { path = "../doser_traits" }
thiserror = { workspace = true }
tracing = "0.1"
rppal = { version = "0.17", optional = true }
libc = { version = "0.2", optional = true }
nix = { version = "0.28", optional = true }

[features]
default = []
hardware = ["rppal"]
rt = ["libc", "nix"]

[dev-dependencies]
rstest = "0.23"
