[package]
name = "doser_hardware"
version = "0.1.0"
edition.workspace = true

[dependencies]
doser_traits = { path = "../doser_traits" }
thiserror = { workspace = true }
tracing = "0.1"
libc = { version = "0.2", optional = true }
nix = { version = "0.28", optional = true }

[features]
default = []
hardware = ["dep:rppal"]
rt = ["libc"]

[dev-dependencies]
rstest = "0.23"

[target.'cfg(target_os = "linux")'.dependencies]
rppal = { version = "0.17", optional = true }
